// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton snapshots checked = false, disabled = false, state = danger 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 28,
        "height": 28,
        "position": "absolute",
        "width": 28,
      }
    }
    layout={
      LinearTransition {
        "build": [Function],
        "durationV": 100,
        "randomizeDelay": false,
        "reduceMotionV": "system",
      }
    }
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 28,
          "height": 28,
          "position": "absolute",
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#db3424",
          "borderWidth": 1,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = false, disabled = false, state = default 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = false, disabled = true, state = default 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#e2e2e4",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            {
              "backgroundColor": "transparent",
            },
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = false, state = danger 1`] = `
<View>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": "#fff0f0",
        "borderRadius": 28,
        "height": 28,
        "position": "absolute",
        "width": 28,
      }
    }
    layout={
      LinearTransition {
        "build": [Function],
        "durationV": 100,
        "randomizeDelay": false,
        "reduceMotionV": "system",
      }
    }
    style={
      [
        {
          "backgroundColor": "#fff0f0",
          "borderRadius": 28,
          "height": 28,
          "position": "absolute",
          "width": 28,
        },
      ]
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderWidth": 5,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#db3424",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#db3424",
          "borderWidth": 1,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = false, state = default 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderWidth": 5,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots checked = true, disabled = true, state = default 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderWidth": 5,
        },
        {
          "backgroundColor": "#e2e2e4",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
          "mixBlendMode": "luminosity",
          "opacity": 0.6,
        },
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#2b2e33",
          "borderWidth": 5,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;

exports[`RadioButton snapshots default 1`] = `
<View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 21,
          "height": 21,
          "justifyContent": "center",
          "margin": 3.5,
          "width": 21,
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#cecfd2",
          "borderWidth": 1,
        },
      ]
    }
    testID="RadioButton_Pressable"
  >
    <View
      style={
        [
          {
            "borderRadius": 10.5,
            "height": 10.5,
            "width": 10.5,
          },
          [
            {
              "backgroundColor": "#ffffff",
            },
            false,
          ],
        ]
      }
    />
  </View>
</View>
`;
